--- a/src/qt/xavander.qrc
+++ b/src/qt/xavander.qrc
@@ -1,7 +1,11 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
+  <qresource prefix="/icons">
+    <file alias="bitcoin">res/icons/bitcoin.png</file>
+    <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
+  </qresource>
+  
   <qresource prefix="/icons/default">
-    <file alias="bitcoin">res/icons/default/bitcoin.png</file>
     <file alias="address-book">res/icons/default/address-book.png</file>
     <file alias="quit">res/icons/default/quit.png</file>
     <file alias="send">res/icons/default/send.png</file>
@@ -27,7 +31,6 @@
     <file alias="editpaste">res/icons/default/editpaste.png</file>
     <file alias="editcopy">res/icons/default/editcopy.png</file>
     <file alias="add">res/icons/default/add.png</file>
-    <file alias="bitcoin_testnet">res/icons/default/bitcoin_testnet.png</file>
     <file alias="edit">res/icons/default/edit.png</file>
     <file alias="history">res/icons/default/history.png</file>
     <file alias="overview">res/icons/default/overview.png</file>
