--- a/src/qt/xavander.qrc
+++ b/src/qt/xavander.qrc
@@ -3,6 +3,9 @@
   <qresource prefix="/icons">
     <file alias="bitcoin">res/icons/bitcoin.png</file>
     <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
+    <file alias="tx_input">res/icons/tx_input.png</file>
+    <file alias="tx_output">res/icons/tx_output.png</file>
+    <file alias="tx_inout">res/icons/tx_inout.png</file>
   </qresource>
   
   <qresource prefix="/icons/default">
@@ -39,9 +42,6 @@
     <file alias="synced">res/icons/default/synced.png</file>
     <file alias="remove">res/icons/default/remove.png</file>
     <file alias="tx_mined">res/icons/default/tx_mined.png</file>
-    <file alias="tx_input">res/icons/default/tx_input.png</file>
-    <file alias="tx_output">res/icons/default/tx_output.png</file>
-    <file alias="tx_inout">res/icons/default/tx_inout.png</file>
     <file alias="unit_xavander">res/icons/default/unit_xavander.png</file>
     <file alias="unit_mxavander">res/icons/default/unit_mxavander.png</file>
     <file alias="unit_uxavander">res/icons/default/unit_uxavander.png</file>
